@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/mendexk/
 ##
-## Copyright (C) 2010-2012 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2010-2014 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -58,5 +58,5 @@ EXTRA_DIST += $(TESTS)
 ## tests/mendex.test
 EXTRA_DIST += tests/foo.idx tests/foo.ind \
 	tests/uni.idx tests/uni.dict tests/uni.ist tests/uni.ind
- (%s)DISTCLEANFILES = foo.* uni.*
+DISTCLEANFILES = foo.* uni.*
 
