@@ -1,3 +1,8 @@
+2014-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* convert.c: Add (unsigned char*) cast arg1 of UTF8StoUCS().
+	* fwrite.c: Declare fprint_euc_char() as static.
+
 2014-05-11  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* main.c: Add TeX Live version.
